WebKit/chromium/src/ExternalPopupMenu.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2009 Google Inc. All rights reserved.
+ * Copyright (C) 2010 Google Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are
@@ -28,38 +28,55 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#ifndef WebMenuItemInfo_h
-#define WebMenuItemInfo_h
+#ifndef ExternalPopupMenu_h
+#define ExternalPopupMenu_h
 
-#include "WebCommon.h"
-#include "WebString.h"
-#include "WebVector.h"
+#include "PopupMenu.h"
+#include "WebExternalPopupMenuClient.h"
+
+namespace WebCore {
+class FrameView;
+class IntRect;
+class PopupMenuClient;
+}
 
 namespace WebKit {
 
-struct WebMenuItemInfo {
-    enum Type {
-        Option,
-        CheckableOption,
-        Group,
-        Separator,
-    };
+class WebExternalPopupMenu;
+class WebViewClient;
+struct WebPopupMenuInfo;
 
-    WebMenuItemInfo() 
-        : type(Option)
-        , action(0)
-        , enabled(false)
-        , checked(false)
-    {
-    }
+// The ExternalPopupMenu connects the actual implementation of the popup menu
+// to the WebCore popup menu.
+class ExternalPopupMenu : public WebCore::PopupMenu,
+                          public WebExternalPopupMenuClient {
+public:
+    ExternalPopupMenu(WebCore::PopupMenuClient*, WebViewClient*);
+    virtual ~ExternalPopupMenu();
 
-    WebString label;
-    Type type;
-    unsigned action;
-    bool enabled;
-    bool checked;
-};
+private:
+    // WebCore::PopupMenu methods:
+    virtual void show(const WebCore::IntRect&, WebCore::FrameView*, int index);
+    virtual void hide();
+    virtual void updateFromElement();
+    virtual void disconnectClient();
+
+    // WebExternalPopupClient methods:
+    virtual void didChangeSelection(int index);
+    virtual void didAcceptIndex(int index);
+    virtual void didCancel();
+
+    // Fills |info| with the popup menu information contained in the
+    // WebCore::PopupMenuClient associated with this ExternalPopupMenu.
+    void getPopupMenuInfo(WebPopupMenuInfo* info);
+
+    WebCore::PopupMenuClient* m_popupMenuClient;
+    WebViewClient* m_webViewClient;
+
+    // The actual implementor of the show menu.
+    WebExternalPopupMenu* m_webExternalPopupMenu;
+}; 
 
 } // namespace WebKit
 
-#endif
+#endif // ExternalPopupMenu_h
